[tool.poetry]
name = "nbdev-test"
version = "0.1.0"
description = ""
authors = ["Auguste Baum <auguste.apple@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
holoviews = "^1.15.0"
torch = "^1.0.2"
nbdev = "^2.1.3"
notebook = "^6.4.12"
matplotlib = "^3.5.2"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
